crates/gdsr/src/cell/snapshots/gdsr__cell__tests__cell_display.snap
---
source: crates/gdsr/src/cell/mod.rs
expression: cell.to_string()
---
Cell 'test_cell' with 1 polygon(s), 0 path(s), 0 text(s)
