crates/gdsr/src/cell/snapshots/gdsr__cell__tests__cell_get_elements-2.snap
---
source: crates/gdsr/src/cell/mod.rs
expression: moved_elements
---
[
    Polygon(
        Polygon {
            points: [],
            layer: 0,
            data_type: 0,
        },
    ),
    Path(
        Path {
            points: [],
            layer: 0,
            data_type: 0,
            type: None,
            width: None,
        },
    ),
    Text(
        Text {
            text: "",
            origin: Point {
                x: Integer {
                    value: 5,
                    units: 1e-9,
                },
                y: Integer {
                    value: 5,
                    units: 1e-9,
                },
            },
            layer: 0,
            datatype: 0,
            magnification: 1.0,
            angle: 0.0,
            x_reflection: false,
            vertical_presentation: Middle,
            horizontal_presentation: Centre,
        },
    ),
    Polygon(
        Polygon {
            points: [],
            layer: 0,
            data_type: 0,
        },
    ),
]
