crates/gdsr/src/cell/snapshots/gdsr__cell__tests__cell_get_elements-3.snap
---
source: crates/gdsr/src/cell/mod.rs
expression: rotated_elements
---
[
    Polygon(
        Polygon {
            points: [],
            layer: 0,
            data_type: 0,
        },
    ),
    Path(
        Path {
            points: [],
            layer: 0,
            data_type: 0,
            type: None,
            width: None,
        },
    ),
    Text(
        Text {
            text: "",
            origin: Point {
                x: Float {
                    value: 5e-9,
                    units: 1e-9,
                },
                y: Float {
                    value: 5e-9,
                    units: 1e-9,
                },
            },
            layer: 0,
            datatype: 0,
            magnification: 1.0,
            angle: 90.0,
            x_reflection: false,
            vertical_presentation: Middle,
            horizontal_presentation: Centre,
        },
    ),
    Polygon(
        Polygon {
            points: [],
            layer: 0,
            data_type: 0,
        },
    ),
]
